# fastapi-learning

demo1/: main.py  pyproject.toml
demo2/: main.py  pyproject.toml
