[tool.poetry]
name = "demo2"
version = "0.1.0"
description = ""
authors = ["Jitendra Kumar <kumar.jitendra0201@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
